// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > should apply the correct styles for different sizes > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-3 py-2 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
  >
    Test Button
  </button>
</div>
`;

exports[`Button > should apply the correct styles for different variants > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-slate-700 bg-slate-700 text-white hover:bg-sky-800 focus:bg-sky-800 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
  >
    Test Button
  </button>
</div>
`;

exports[`Button > should render a button with default styles > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center rounded border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70"
  >
    Test Button
  </button>
</div>
`;

exports[`Button > should render a disabled Button correctly > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 rounded-full"
    disabled=""
  >
    Test Button
  </button>
</div>
`;

exports[`Button > should render a pill Button correctly > expected html 1`] = `
<div>
  <button
    class="font-lato inline-flex items-center justify-center border align-middle outline-offset-4 px-5 py-2.5 text-sm border-gray-300 bg-gray-200 text-slate-700 hover:bg-neutral-300 focus:bg-neutral-300 disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-70 rounded-full"
  >
    Test Button
  </button>
</div>
`;
